--- a/faculty/templates/student-reservation.html
+++ b/faculty/templates/student-reservation.html
@@ -246,104 +246,6 @@
             <!-- Dynamic messages end -->
 
 
-            <!-- Modal for Viewing Item -->
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header" style="border-bottom: 2px solid #593bdb;">
-                <h5 class="modal-title" id="exampleModalCenterTitle" style="font-size: 25px;">View Item</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-            <div class="modal-body">
-                <div class="form-group row" style="margin-top: 1px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Student ID:</label>
-                    <p id="modal-student-id" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Name:</label>
-                    <p id="modal-name" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Course:</label>
-                    <p id="modal-course" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Year:</label>
-                    <p id="modal-year" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Phone Number:</label>
-                    <p id="modal-phone" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Email:</label>
-                    <p id="modal-email" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Item:</label>
-                    <p id="modal-item" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Quantity:</label>
-                    <p id="modal-quantity" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Date Reserved:</label>
-                    <p id="modal-date-borrow" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Status:</label>
-                    <p id="modal-status" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-                <div class="form-group row" style="margin-top: -20px;">
-                    <label class="col-form-label text-md-left font-weight-bold col-12 col-md-4 col-lg-4 text-dark" style="font-size: 15px;">Purpose:</label>
-                    <p id="modal-purpose" class="text-dark mt-1" style="font-size: 15px; margin-left: 20px;"></p>
-                </div>
-            </div>
-            <div class="modal-footer" style="margin-top: -20px;">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-<!-- send notification -->
-<div class="modal fade" id="exampleModalLong" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header" style="border-bottom: 2px solid #593bdb;">
-                <h5 class="modal-title">Send Notification</h5>
-                <button type="button" class="close" onclick="closeModal()"><span>×</span></button>
-            </div>
-            <form id="emailNotificationForm" method="post" action="{% url 'update_reservation_status' %}">
-                {% csrf_token %}
-                <div class="modal-body">
-                    <div class="form-group">
-                        <label for="Message" style="color: #333;">Message</label>
-                        <textarea class="form-control" id="Message" name="message" rows="4" required style="border: 1px solid #474747;"></textarea>
-                    </div>
-
-                    <!-- Hidden inputs to store reservation ID and status -->
-                    <input type="hidden" id="reservationIdInput" name="reservation_id">
-                    <input type="hidden" id="statusInput" name="status">
-                </div>
-                <div class="modal-footer">
-                    <!-- Close and Submit Buttons -->
-                  <button type="button" class="btn btn-secondary" onclick="closeModal()">Close</button>
-                  <button type="submit" class="btn btn-primary" id="submitButton">
-                      <span id="buttonText">Send Email</span>
-                      <span id="buttonSpinner" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="display: none;"></span>
-                  </button> 
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
-
 
 
             
@@ -398,10 +300,9 @@
                                                 <th scope="col">Name</th>
                                                 <th scope="col">Course</th>
                                                 <th scope="col">Year</th>
-                                                <th scope="col">Item</th>
-                                                <th scope="col">Quantity</th>
+                                                <th scope="col">Phone</th>
                                                 <th scope="col">Date Reserve</th>
-                                                <th scope="col">Status</th>
+                                                <th scope="col">Time Span</th>
                                                 <th scope="col" style="width: 80px;">Action</th>
                                             </tr>
                                         </thead>
@@ -413,42 +314,15 @@
                                                         <td>{{ request.name }}</td>
                                                         <td>{{ request.course }}</td>
                                                         <td>{{ request.year_level }}</td>
-                                                        <td>{{ request.content_object.name }}</td>
-                                                        <td>{{ request.quantity }}</td>
-                                                        <td>{{ request.reserve_date|date:"d F, Y" }}</td>
-                                                        <td>
-                                                            <div id="status-badge-{{ request.id }}" class="badge {% if request.status == 'Approved' %}badge-success text-white{% elif request.status == 'Denied' %}badge-danger{% else %}badge-secondary{% endif %}">
-                                                                {{ request.status }}
-                                                            </div>
-                                                        </td>
+                                                        <td>{{ request.phone_number }}</td>
+                                                        <td>{{ request.reserve_date }}</td>
+                                                        <td>{{ request.time_ago }}</td>
                                                         <td style="text-align: center; vertical-align: middle;">
-                                                            <div class="dropdown">
-                                                                <a class="btn btn-link font-24 p-0 line-height-1 no-arrow dropdown" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-                                                                    <img src="{% static 'images/mores.png' %}" alt="" width="30" height="30">
-                                                                </a>
-                                                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                                                    <button class="dropdown-item" onclick="openNotificationModal('{{ request.id }}', 'Approved')">
-                                                                        <img src="{% static 'images/check-btn.png' %}" alt="" width="25" height="25">&nbsp; Approved
-                                                                    </button>
-                                                                    <button class="dropdown-item" onclick="openNotificationModal('{{ request.id }}', 'Denied')">
-                                                                        <img src="{% static 'images/deny-btn.png' %}" alt="" width="25" height="25">&nbsp; Denied
-                                                                    </button>
-                                                                    <button class="dropdown-item view-item-btn" data-toggle="modal" data-target="#exampleModalCenter"
-                                                                        data-student-id="{{ request.student_id }}"
-                                                                        data-name="{{ request.name }}"
-                                                                        data-course="{{ request.course }}"
-                                                                        data-year="{{ request.year_level }}"
-                                                                        data-email="{{ request.email }}"
-                                                                        data-phone="{{ request.phone_number }}"
-                                                                        data-item="{{ request.content_object.name }}"
-                                                                        data-quantity="{{ request.quantity }}"
-                                                                        data-date="{{ request.reserve_date }}"
-                                                                        data-purpose="{{ request.purpose }}"
-                                                                        data-status="{{ request.status }}">
-                                                                        <img src="{% static 'images/eye-btn.png' %}" alt="" width="25" height="25">&nbsp; View
-                                                                    </button>
-                                                                </div>
-                                                            </div>
+                                                            <a href="{% url 'update-reservation-status' reservation_id=request.id %}">
+                                                                <button type="button" class="btn btn-secondary">
+                                                                    <i class="fas fa-eye"></i>
+                                                                </button>
+                                                            </a>
                                                         </td>  
                                                     </tr>
                                                 {% endfor %}
