--- a/DapartmentChair/templates/admin-dashboard.html
+++ b/DapartmentChair/templates/admin-dashboard.html
@@ -573,9 +573,9 @@
                                                       <td>{{ request.date_borrow }}</td>
                                                       <td>{{ request.time_ago }}</td>
                                                       <td>
-                                                          {% if request.status == "Borrowed" %}
-                                                              <div class="badge badge-success" style="color: white;">{{ request.status }}</div>
-                                                          {% elif request.status == "Returned" %}
+                                                          {% if request.status == "Partial Item Returned" %}
+                                                              <div class="badge badge-primary" style="color: white;">{{ request.status }}</div>
+                                                          {% elif request.status == "Fully Returned" %}
                                                               <div class="badge badge-primary">{{ request.status }}</div>
                                                           {% else %}
                                                               <div class="badge badge-secondary">{{ request.status }}</div>
@@ -584,16 +584,16 @@
                                           
                                       
                                                       <td style="text-align: center; vertical-align: middle;">
-                                                        {% if request.status == "Borrowed" %}
+                                                        {% if request.status == "Unreturned" or request.status == "Partial Item Returned" %}
                                                             <!-- Show dropdown only if status is "Borrowed" -->
                                                             <div class="dropdownnn">
                                                                 <a class="btn btn-link font-24 p-0 line-height-1 no-arrow -toggle" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
                                                                     <img src="{% static 'images/mores.png' %}" alt="" width="30" height="30">
                                                                 </a>
                                                                 <div class="dropdown-menu dropdown-menu-right dropdown-menu-icon-list">
-                                                                    <button onclick="redirectToBorrowerDetails('{{ request.student_id }}', '{{ request.name }}', '{{ request.date_borrow }}', '{{ request.id }}')" class="dropdown-item">
-                                                                        <i class="fas fa-eye"></i>&nbsp; Borrower Details
-                                                                    </button>
+                                                                  <button onclick="redirectToBorrowerDetails('{{ request.student_id }}', '{{ request.name }}', '{{ request.date_borrow }}', '{{ request.id }}', '{{ request.status }}', '{{ request.status }}')" class="dropdown-item">
+                                                                    <i class="fas fa-eye"></i>&nbsp; Borrower Details
+                                                                </button>
                                                     
                                                                   
                                                                     
@@ -607,7 +607,7 @@
                                                                     </button>
                                                                 </div>
                                                             </div>
-                                                        {% elif request.status == "Returned" %}
+                                                        {% elif request.status == "Fully Returned" %}
                                                             <!-- Show view button only if status is "Returned" -->
                                                             <button type="button" class="btn btn-primary view-item-btn btn-sm" data-toggle="modal" data-target="#exampleModalCenter"
                                                                     data-request-id="{{ request.id }}"
@@ -716,8 +716,8 @@
     window.location.search = urlParams.toString();
 }
 
-function redirectToBorrowerDetails(studentId, name, dateBorrow, borrowRequestId) {
-  const url = `{% url 'admin-borrower-details-dashboard' %}?student_id=${studentId}&name=${encodeURIComponent(name)}&date_borrow=${dateBorrow}&borrow_request_id=${borrowRequestId}`;
+function redirectToBorrowerDetails(studentId, name, dateBorrow, borrowRequestId, status) {
+  const url = `{% url 'admin-borrower-details-dashboard' %}?student_id=${studentId}&name=${encodeURIComponent(name)}&date_borrow=${dateBorrow}&borrow_request_id=${borrowRequestId}&status=${status}`;
   window.location.href = url;
 }
 
