--- a/reservation/templates/reservation-login.html
+++ b/reservation/templates/reservation-login.html
@@ -25,6 +25,7 @@
     }
 </style>
 
+
 {% endblock %}
 
 
@@ -55,21 +56,62 @@
 {% block content %}
 
 
-	<div class="login-header box-shadow">
-		<div class="container-fluid d-flex justify-content-between align-items-center">
-			<div class="brand-logo">
-				<a href="javascript:void()">
-					<img src="{%static 'images/pit_logo.png'%}" alt="" width="65" height="65">
-					<span class="text-primary" style="font-weight: 800;">&nbsp; Student Reservation Item</span>
-				</a>
-			</div>
-			<div class="login-menu">
-				<ul>
-					<li><a href="{%url 'home_redirect'%}">Faculty Login</a></li>
-				</ul>
-			</div>
-		</div>
-	</div>
+<div class="login-header box-shadow">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+        <div class="brand-logo">
+            <a href="javascript:void()">
+                <img src="{% static 'images/pit_logo.png' %}" alt="" class="logo-img">
+                <span class="text-primary header-text" style="font-weight: 800;">&nbsp; Student Reservation Item</span>
+            </a>
+        </div>
+        <div class="login-menu">
+            <ul>
+                <li><a href="{% url 'home_redirect' %}" class="login-link">Faculty Login</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<style>
+    /* Responsive styles */
+    .logo-img {
+        width: 65px;
+        height: 65px;
+    }
+
+    /* Smaller logo and text for tablets and smaller devices */
+    @media (max-width: 768px) {
+        .logo-img {
+            width: 50px;
+            height: 50px;
+        }
+        .header-text {
+            font-size: 18px; /* Adjust font size as needed */
+        }
+        .login-link {
+            font-size: 14px; /* Smaller font for Faculty Login link */
+        }
+    }
+
+    /* Further size adjustments for extra small screens */
+    @media (max-width: 576px) {
+        .logo-img {
+            width: 40px;
+            height: 40px;
+        }
+        .header-text {
+            font-size: 16px;
+        }
+        .login-link {
+            font-size: 12px;
+			display: none;
+        }
+    }
+</style>
+
+
+
+
 
 		<!-- Dynamic messages start -->
 		<div id="django-messages" style="display:none;">
@@ -81,56 +123,58 @@
 
 
 
-	<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
-		<div class="container">
-			<div class="row align-items-center">
-				<div class="col-md-6 col-lg-7">
-					<img src="{%static '/images/reserve.png'%}" alt="">
-				</div>
-				<div class="col-md-6 col-lg-5">
-					<div class="login-box bg-white box-shadow border-radius-10">
-						<div class="login-title">
-							<h2 class="text-center text-primary">Student Login</h2>
+		<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
+			<div class="container">
+				<div class="row align-items-center">
+					<!-- Image Column -->
+					<div class="col-md-6 col-lg-7 d-none d-md-block">
+						<img src="{% static '/images/reserve.png' %}" alt="" class="img-fluid">
+					</div>
+					<!-- Form Column -->
+					<div class="col-md-6 col-lg-5">
+						<div class="login-box bg-white box-shadow border-radius-10 p-4">
+							<div class="login-title">
+								<h2 class="text-center text-primary">Student Login</h2>
+							</div>
+							<form method="POST" action="{% url 'reservation-login' %}">
+								{% csrf_token %}
+								<div class="input-group custom mb-3">
+									<input type="text" class="form-control form-control-lg" name="student_id" placeholder="Student ID" required>
+									<div class="input-group-append custom">
+										<span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
+									</div>
+								</div>
+								<div class="input-group custom mb-3">
+									<input type="password" class="form-control form-control-lg" name="password" placeholder="**********" required>
+									<div class="input-group-append custom">
+										<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
+									</div>
+								</div>
+								<div class="row pb-3">
+									<div class="col-6">
+										<div class="forgot-password" style="position: relative;">
+											<a href="{% url 'reservation-forgot-password' %}">Forgot Password</a>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-12">
+										<div class="input-group mb-3">
+											<input class="btn btn-primary btn-lg btn-block" type="submit" value="Login">
+										</div>
+										<div class="font-16 weight-600 pt-2 pb-2 text-center" data-color="#707373">OR</div>
+										<div class="input-group mb-0">
+											<a class="btn btn-outline-primary btn-lg btn-block" href="{% url 'reservation-register' %}">Register To Create Account</a>
+										</div>
+									</div>
+								</div>
+							</form>
 						</div>
-						<form method="POST" action="{% url 'reservation-login' %}">
-							{% csrf_token %}
-							<div class="input-group custom">
-								<input type="text" class="form-control form-control-lg" name="student_id" placeholder="Student ID" required>
-								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
-								</div>
-							</div>
-							<div class="input-group custom">
-								<input type="password" class="form-control form-control-lg" name="password" placeholder="**********" required>
-								<div class="input-group-append custom">
-									<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
-								</div>
-							</div>
-							<div class="row pb-30">
-								<div class="col-6">
-									<div class="forgot-password" style="left: -30px; position: relative;">
-										<a href="{% url 'reservation-forgot-password' %}">Forgot Password</a>
-									</div>
-								</div>
-							</div>
-							<div class="row">
-								<div class="col-sm-12">
-									<div class="input-group mb-0">
-										<input class="btn btn-primary btn-lg btn-block" type="submit" value="Login">
-									</div>
-									<div class="font-16 weight-600 pt-10 pb-10 text-center" data-color="#707373">OR</div>
-									<div class="input-group mb-0">
-										<a class="btn btn-outline-primary btn-lg btn-block" href="{% url 'reservation-register' %}">Register To Create Account</a>
-									</div>
-								</div>
-							</div>
-						</form>
-						
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
+		
 
 
 	<!-- Add this script to hide the alerts after 5 seconds -->
