--- a/static/css/login.css
+++ b/static/css/login.css
@@ -9,7 +9,7 @@ body{
   background:linear-gradient(
     rgba(0, 0, 0, 0.5), 
     rgba(0, 0, 0, 0.5)
-  ), url(../images/bggg.png);
+  ), url(../images/ictbg.jpg);
   
   background-size: cover;
   overflow: hidden;
@@ -24,7 +24,7 @@ body::before {
   background: linear-gradient(
     rgba(0, 0, 0, 0.5), 
     rgba(0, 0, 0, 0.5)
-  ), url(../images/bggg.png); 
+  ), url(../images/ictbg.jpg); 
   background-size: cover;
   z-index: -1;
 }
